# django-homework

./: pyproject.toml
config/: settings.py  urls.py
main/: urls.py  views.py
main/templates/main/: contacts.html
