[tool.poetry]
name = "django-homework"
version = "0.1.0"
description = ""
authors = ["Daniels Ivaskevics <wavesaftwaves@gmail.com>"]
readme = "README.md"
packages = [{include = "django_homework"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
